# coffee_bot

./: Cargo.toml
src/: main.rs
src/application/use_cases/: get_coffee_market_indicators.rs  get_coffee_price.rs  mod.rs
src/domain/entities/: coffee_market_indicators.rs  coffee_price.rs  mod.rs
src/domain/traits/: cache_repository.rs  clock.rs  coffee_market_provider.rs  coffee_price_provider.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: in_memory_cache.rs  mod.rs  redis_cache.rs
src/infrastructure/providers/: mock_provider.rs  mod.rs  scraper_market_provider.rs  scraper_provider.rs
src/infrastructure/time/: mod.rs  system_clock.rs
