[package]
name = "coffee_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = {version = "0.4.43", features = ["serde"]}
redis = "1.0.4"
reqwest = {version = "0.13.2", features = ["json"]}
scraper = "0.25.0"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.49.0", features = ["full"]}
