[package]
name = "coffee_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = {version = "0.4.43", features = ["serde"]}
redis = {version = "1.0.4", features = ["tokio-comp"]}
reqwest = {version = "0.13.2", features = ["json"]}
scraper = "0.25.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"]}
